# OmniShotCut

./: .gitignore  Dockerfile.eas  LICENSE  README.md  app.py  eas_api.py  inference.py  pyproject.toml  requirements.txt
datasets/: dataloader.py  transforms.py
omnishotcut/: __init__.py  engine.py  label_correspondence.py
omnishotcut/architecture/: backbone.py  model.py  position_encoding.py  transformer.py
omnishotcut/config/: argument_setting.py  label_correspondence.py
omnishotcut/datasets/: __init__.py  dataloader.py  transforms.py  utils.py
omnishotcut/util/: misc.py  visualization.py
test_code/: inference.py  test_benchmark.py
util/: visualization.py
