[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnishotcut"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy>=1.26",
    "decord",
    "opencv-python",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["omnishotcut*"]
