[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnishotcut"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy>=1.26",
    "ffmpeg-python",
    "opencv-python",
    "huggingface_hub",
    "Pillow",
    "packaging",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["omnishotcut*"]
